# omniem-train

./: .gitignore  LICENSE  README.md  pyproject.toml
configs/: example_run.yaml
docs/: guide.md
omniem_train/: __init__.py  _omniem.py  checkpoint.py  cli.py  logging.py  model.py  schedule.py  seed.py  trainer.py
omniem_train/aug/: __init__.py  builder.py
omniem_train/config/: __init__.py  io.py  schema.py
omniem_train/data/: __init__.py  loader.py  reader.py
omniem_train/loss/: __init__.py  base.py  factory.py  restoration.py  segmentation.py
omniem_train/metrics/: __init__.py  aggregator.py  factory.py
